<resources>
    <string name="app_name">TipCalculator</string>
    <string name="amount_description">Enter the total amount:</string>
    <string name="tip_description">Enter the tip percentage:</string>
    <string name="button_title">Calculate Tip</string>
    <string name="value_one">1</string>
    <string name="return_to_main_menu">Return To Main Menu</string>
    <string name="action_settings">settings</string>
    <string name="tip_calc">Tip Calculator</string>
    <string name="help_with_tip_percentage"><u>Need Help Deciding a Tip Percentage?</u></string>
    <string name="number_of_people">Enter the number of people:</string>
    <string name="default_currency">Please Select a Default Currency:</string>
    <string name="default_tip_percentage_prompt">Select a Default Tip Percentage:</string>
    <string name="set_default">Set Defaults</string>
    <string name="your_service_rating_is">Your service rating is:</string>
    <string-array name="currencies">
        <item> Dollar </item>
        <item> Pound </item>
        <item> Euro </item>
    </string-array>
</resources>
